fix: cart list overflow issue

--- a/app/src/app/molecules/menu-list/CartMenu.scss
+++ b/app/src/app/molecules/menu-list/CartMenu.scss
@@ -10,7 +10,7 @@
 }
 
 .product-list {
-  max-height: 420px;
+  height: 420px;
 }
 
 .total {
